--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <title>Poke App</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GM93SH0E0D"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-GM93SH0E0D');
+    </script>
   </head>
   <body>
     <div id="root"></div>
